# qemu-scale-to-zero-lab

./: Caddyfile.j2  Dockerfile  README.md  docker-compose.j2  render.py  requirements.txt  test_button_component.py  test_complete_functionality.py  test_iframe_functionality.py  test_kali_tmpfs_volume.py  test_render_tls_compose.py
.cursor/rules/: qemu.mdc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
container-lock/: Dockerfile  README.md  pyproject.toml  run_tests.py  test_lock_refined.py
container-lock/container_lock/: config.py  lock.py  main.py  middleware.py  mock_redis.py  test_lock.py  utils.py
container-lock/container_lock/static/: container-buttons.js  styles.css
container-lock/container_lock/templates/: container_session.html  container_sessions.html  error.html
output/: Caddyfile  docker-compose.yml
templates/: Caddyfile.j2  docker-compose.j2
